--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,32 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Power to her wings</title>
- 
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Welcome to Helping Hands Community</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+</head>
+<body>
+
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="logo.jpg" alt="Helping Hands Logo">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Sign In / Sign Up</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Welcome Header -->
+  <div class="container text-center mt-5">
     <h1>Welcome to Power to Her Wings</h1>
-    <div class="container mt-5">
+  </div>
+
+  <!-- Mission Section -->
+  <div class="container mt-5">
     <div class="row align-items-center">
       <div class="col-md-4">
-        <img src="download.jpg" class="img-fluid" alt="Left Image">
+        <img src="download.jpg" class="img-fluid" alt="Empowered Women Image">
       </div>
       <div class="col-md-8">
-        <h2>Our mission</h2>
+        <h2>Our Mission</h2>
         <p>
-          "We are dedicated to supporting women from all walks of life by providing guidance, resources, and encouragement in the fields where they need it most. Whether it’s career development, education, mental health, entrepreneurship, or personal growth, our mission is to uplift and empower women to realize their full potential. We believe that when women are supported and given the opportunity to thrive, entire communities benefit. Through compassion, collaboration, and commitment, we strive to create a world where every woman feels confident, capable, and connected."
+          "We are dedicated to supporting women from all walks of life by providing guidance, resources, and encouragement in the fields where they need it most. Whether it’s career development, education, mental health, entrepreneurship, or personal growth, our mission is to uplift and empower women to realize their full potential."
         </p>
       </div>
     </div>
   </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+
+  <!-- Footer -->
+  <footer class="bg-dark text-light mt-5">
+    <div class="container py-4">
+      <div class="row">
+        <div class="col-md-4">
+          <h5>About Us</h5>
+          <p>Helping Hands is committed to empowering women with the tools, support, and network to succeed in all areas of life.</p>
+        </div>
+        <div class="col-md-4">
+          <h5>Quick Links</h5>
+          <ul class="list-unstyled">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Sign In</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h5>Connect With Us</h5>
+          <a href="#"><i class="bi bi-facebook"></i></a>
+          <a href="#"><i class="bi bi-twitter"></i></a>
+          <a href="#"><i class="bi bi-instagram"></i></a>
+        </div>
+      </div>
+      <hr class="mt-3">
+      <p class="text-center mb-0">&copy; 2025 Helping Hands. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <!-- Back to Top Button -->
+  <button id="topBtn" onclick="scrollToTop()" title="Go to top">&#8679;</button>
+
+  <script>
+    // Show/hide back to top button
+    window.onscroll = function () {
+      const btn = document.getElementById("topBtn");
+      btn.style.display = window.scrollY > 300 ? "block" : "none";
+    };
+
+    function scrollToTop() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
