--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="logo.jpg" alt="Helping Hands Logo">
+         <span class="fw-bold brand-text">Helping Hands organization</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
@@ -56,7 +57,7 @@
       <div class="row">
         <div class="col-md-4">
           <h5>About Us</h5>
-          <p>Helping Hands is committed to empowering women with the tools, support, and network to succeed in all areas of life.</p>
+          <p class ="footer-text">Helping Hands is committed to empowering women with the tools, support, and network to succeed in all areas of life.</p>
         </div>
         <div class="col-md-4">
           <h5>Quick Links</h5>
